Changelog
=========

2.3 LTS (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~~~~~

 * Added support for Django 2.1 (Ryan Verner, Matt Westcott)


2.2 (xx.xx.xxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~

 * Added faceted search using the `.facet()` method (Karl Hobley)
 * Added page type filtering and ordering to the Wagtail admin page search (Karl Hobley)
 * Added another valid AudioBoom oEmbed pattern (Bertrand Bordage)
 * Added `annotate_score` support to PostgreSQL search backend (Bertrand Bordage)
 * Pillow's image optimisation is now applied when saving PNG images (Dmitry Vasilev)
 * JS / CSS media files can now be associated with Draftail feature definitions (Matt Westcott)
 * The `{% slugurl %}` template tag is now site-aware (Samir Shah)
 * Added `file_size` field to documents (Karl Hobley)
 * Added `file_hash` field to images (Karl Hobley)
 * Update documentation (configuring Django for Wagtail) to contain all current settings options (Matt Westcott, LB (Ben Johnston))
 * Added `defer` flag to `PageQuerySet.specific` (Karl Hobley)
 * Snippets can now be deleted from the listing view (LB (Ben Johnston))
 * Increased max length of redirect URL field to 255 (Michael Harrison)
 * Added documentation for new JS/CSS media files association with Draftail feature definitions (Ed Henderson)
 * Added accessible colour contrast guidelines to the style guide (Catherine Farman)
 * Admin modal views no longer rely on Javascript `eval()`, for better CSP compliance (Matt Westcott)
 * Update editor guide for embeds and documents in rich text (Kevin Howbrook)
 * Improved performance of sitemap generation (Michael van Tellingen, Bertrand Bordage)
 * Added an internal API for autocomplete (Karl Hobley, Bertrand Bordage)
 * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
 * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
 * Fix: Remove duplicate border radius of avatars (Benjamin Thurm)